<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<item   android:title="User">
    <menu>
        <item android:id="@+id/nav_menu_login"
            android:icon="@drawable/ic_person"
            android:title="@string/action_login">
        </item>
        <item android:id="@+id/nav_menu_registration"
            android:icon="@drawable/ic_registration_person"
            android:title="@string/nav_item_register">
        </item>
        <item android:id="@+id/nav_menu_list"
            android:icon="@drawable/ic_list"
            android:title="@string/title_list">
        </item>
    </menu>
</item>

    <item   android:title="Activity">
        <menu>
            <item android:id="@+id/nav_easy_image"
                android:icon="@drawable/ic_easy_image"
                android:title="@string/menu_easy_image">
            </item>
            <item android:id="@+id/nav_view_pager"
                android:icon="@drawable/ic_view_group"
                android:title="@string/menu_view_pager">
            </item>
            <item android:id="@+id/nav_button_navigation"
                android:icon="@drawable/ic_btn_navigation"
                android:title="@string/menu_btn_navigation">
            </item>
        </menu>
    </item>

</menu>